--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 
-name: CI/Validate
+name: Build
 
 on:
   push:
@@ -8,28 +8,23 @@ on:
   pull_request:
 
 jobs:
-  # validate:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout the source code
-  #     uses: actions/checkout@v2
-  #   - name: Validate SQF
-  #     run: python3 tools/sqf_validator.py
-  #   - name: Validate Config
-  #     run: python3 tools/config_style_checker.py
-  #   - name: Validate Stringtables
-  #     run: python3 tools/stringtable_validator.py
-  #   - name: Validate Return Types
-  #     run: python3 tools/return_checker.py
-  #   - name: Check for BOM
-  #     uses: arma-actions/bom-check@master
+  validate:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout the source code
+      uses: actions/checkout@v3
+    - name: Validate SQF
+      run: python3 tools/sqf_validator.py
+    - name: Validate Config
+      run: python3 tools/config_style_checker.py
+    - name: Check for BOM
+      uses: arma-actions/bom-check@master
+
   build:
     runs-on: windows-2022
     steps:
       - name: Checkout the source code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
+        uses: actions/checkout@v3
       - name: Set up A3Tools
         uses: arma-actions/arma3-tools@master
         with:
