--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,22 +25,14 @@ jobs:
     steps:
       - name: Checkout the source code
         uses: actions/checkout@v3
-      - name: Set up A3Tools
-        uses: arma-actions/arma3-tools@master
-        with:
-          toolsUrl: ${{ secrets.A3TOOLS_S3_URL }}
-      - name: Set up scons
-        run: python -m pip install scons
-      - name: Build with Scons
-        run: scons
-      - name: Archive Release
-        uses: thedoctor0/zip-release@0.7.1
-        with:
-          type: 'zip'
-          path: 'release'
-          filename: 'hatchet_h60.zip'
+      - name: Setup HEMTT
+        uses: arma-actions/hemtt@v1
+      - name: Run HEMTT build
+        run: hemtt build
+      - name: Rename build folder
+        run: mv .hemttout/build .hemttout/@hatchet_h60
       - name: Upload Artifact
-        uses: actions/upload-artifact@v2-preview
+        uses: actions/upload-artifact@v3
         with:
-          name: hatchet-${{ github.sha }}-nobin
-          path: hatchet_h60.zip
+          name: hatchet_h60-${{ github.sha }}-nobin
+          path: .hemttout/@*
